--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   gtag('config', 'UA-230304002-1');
 </script>
 <script src="https://www.googleoptimize.com/optimize.js?id=OPT-PB94L6M"></script>
-  <!-- anti-flicker snippet (recommended)  -->
+  <!-- anti-flicker snippet (recommended) 
 <style>.async-hide { opacity: 0 !important} </style>
 <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
 h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
 (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
 })(window,document.documentElement,'async-hide','dataLayer',4000,
-{'GTM-PGGZPT4':true});</script>
+{'GTM-PGGZPT4':true});</script> -->
   <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
